package com.exasol.sql;

public interface TableReference extends Fragment {
}
