package com.exasol.sql.dql;

import com.exasol.sql.Fragment;

public interface FieldDefinition extends Fragment {

}
